# BetterStreets

./: .envrc  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  package.json  test.html
admin/: Dockerfile  package-lock.json  package.json
admin/src/: App.tsx
api/: Dockerfile  geo_test.py  index.js  package-lock.json  package.json  prestart.sh  pyproject.toml
api-old/: Dockerfile  index.js  package-lock.json  package.json
api-old/config/: multer.js
api/badlyparked/: crud.py  db.py  main.py  models.py  schemas.py  validate.py
api/badlyparked/routers/: report.py  uploads.py
api/betterstreets/: config.py  crud.py  main.py  models.py  schemas.py
api/betterstreets/JSON/: birmingham.json  harborne.json  quinton.json
api/betterstreets/routers/: crossings.py  report.py  uploads.py
api/config/: multer.js
postgres/: Dockerfile  api.sh
public/: index.html
server/: index.js  package-lock.json  package.json
src/: App.tsx
src/Components/: form.css  form.tsx  main.tsx  map.css  map.tsx  map_main.tsx  modal.tsx  navbar.tsx  tags.tsx
traefik/config/: middlewares.yaml  tls.yaml
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: index.html
web/src/: App.css  App.tsx  index.css
web/src/Components/: about.tsx  form.css  form.tsx  formSucess.tsx  imgDraw.tsx  imgPopUp.tsx  logger.tsx  main.tsx  map.css  map.tsx  map_main.tsx  modal.tsx  navbar.css  navbar.tsx  popup.tsx  sidesettings.tsx  submit.tsx  tag.css  tags.tsx
web/src/JSON/: acocksGreen.json  aston.json  (+49 more)
(+7 files in other folders)
